--- a/mscthesis.tex
+++ b/mscthesis.tex
@@ -102,6 +102,7 @@
   \todo[FINAL]{Bindestriche zwischen 'CSR/C3SR' und 'format' vereinheitlichen}
   \todo[FINAL]{Schreibweise der Arrays vereinheitlichen}
   \todo[FINAL]{non-zero vs nonzero}
+  \todo[FINAL]{Überschriften unkackern}
   \todo{Subsubsection \& Paragraph stylistisch trennen}
   \todo{Reihenbeschriftung der simd-i..-scheme Matrizen horizontal ausrichten}
   \todo{Figure-Style überall anpassen}
