--- a/content/c3sr-implementation.tex
+++ b/content/c3sr-implementation.tex
@@ -6,7 +6,7 @@
   been implemented. This chapter explains noteworthy design choices and implementation details and takes note where
   alternative options exist.
 
-  \section{Generation of C3SR Matrices From Matrices in CSR Representation}
+  \section{Generation of C3SR Matrices From Matrices in CSR Representation} \label{sec:gen-of-c3sr-from-csr}
 
     The C3SR-format can be understood as a refinement of the CSR-format's basic ideas for sparse banded matrices derived
     from structured grids. Naturally, the CSR-format has been chosen as a landing pad for the creation of matrix objects
