--- a/content/matrixgen-intro.tex
+++ b/content/matrixgen-intro.tex
@@ -1,3 +1,5 @@
+\chapter{Introduction and Overview} \label{sec:matrixgen-intro}
+
 WIP;
 
 During the creation of the part 1 experimentation with many matrices of various shapes and sizes was required. For this
